# docthu

./: CLAUDE.md  README.md  llms.txt  pyproject.toml  shell.nix
docs/: api.md
docthu/: __init__.py  __main__.py  app.py  coercion.py  matcher.py  tokenizer.py
docthu/components/email_selector/: __init__.py  index.html
examples/shopee/: README.md  template.html  test1.html  test2.html  test3.html
tests/: test_basic.py
